# WalletMind

./: .env.example  .gitignore  PROJECT_CONTEXT.md  PROJECT_PLAN.md  README.md  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: ci.yml
backend/app/: main.py
backend/app/adk/: __init__.py  config.py  memory.py  runner.py  runtime.py  session.py  workflow.py
backend/app/agents/: __init__.py  assistant_agent.py  base_agent.py  budget_agent.py  context.py  coordinator_agent.py  health_agent.py  insights_agent.py  types.py  (+4 more)
docs/: google-ai-agents-capstone.md  mcp-architecture.md  mcp-tools.md  multi-agent-architecture.md
docs/architecture/: agents.md  data_models.md  memory.md  overview.md  planner.md  tools.md
docs/deployment/: deployment.md
docs/evaluation/: kaggle_mapping.md
docs/implementation/: implementation_plan.md
docs/judge/: API_EXAMPLES.md  ARCHITECTURE.md  DEMO_GUIDE.md  EVALUATION_SUMMARY.md  JUDGE_CHECKLIST.md  QUICK_START.md  README.md  RUBRIC_MAPPING.md
docs/notebook/: storyboard.md
docs/prompts/: prompt_standards.md
docs/screenshots/: README.md
docs/security/: security.md
frontend/: index.html  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts  validation.test.ts  validation.ts
notebooks/: README.md  walletmind_capstone_submission.ipynb
notebooks/exported/: walletmind_capstone_submission.html
notebooks/helpers/: __init__.py  rendering.py
sample_data/: upload-test.csv  upload-test.txt
storage/database/: walletmind.db
tests/api/: test_agents_execute_api.py  test_ai_api_key_api.py  test_ai_health_api.py  test_assistant_api.py  test_budget_recommendations_api.py  test_health_score_api.py  test_monthly_report_api.py  test_root_landing_api.py  test_statement_insights_api.py  test_statement_upload_api.py  test_transactions_api.py  test_user_registration_api.py
tests/core/: test_database_foundation.py  test_statement_storage.py
tests/intelligence/: test_category_classifier.py  test_confidence.py  test_merchant_detector.py  test_payment_channel_detector.py  test_recurring_detector.py  test_transaction_enricher.py  test_transfer_detector.py
tests/services/: test_processing_dispatcher.py  test_statement_classifier.py  test_statement_parsers.py  test_statement_processing_service.py  test_statement_upload_service.py  test_transaction_normalizer.py  test_transaction_service.py  test_user_service.py
walletmind/: __init__.py  __main__.py  exceptions.py  version.py
walletmind/intelligence/: __init__.py  category_classifier.py  confidence.py  merchant_detector.py  payment_channel_detector.py  recurring_detector.py  transaction_enricher.py  transfer_detector.py
walletmind/schemas/: __init__.py  statement.py  transaction.py  user.py
walletmind/services/: __init__.py  bank_detection_service.py  processing_dispatcher.py  statement_classifier.py  statement_parsers.py  statement_processing_service.py  statement_upload_service.py  transaction_normalizer.py  transaction_service.py  user_service.py
walletmind/ui/: __init__.py  registration.py
walletmind/utils/: __init__.py  file_uploads.py
(+251 files in other folders)
