[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walletmind"
version = "0.1.0"
description = "WalletMind personal finance agent project."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "WalletMind Contributors" },
]
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.8",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30.0",
]
Homepage = "https://github.com/Abhinav-B-19/WalletMind"
Repository = "https://github.com/Abhinav-B-19/WalletMind"
Issues = "https://github.com/Abhinav-B-19/WalletMind/issues"
keywords = [
    "ai",
    "agents",
    "finance",
    "google-adk",
    "kaggle",
    "personal-finance",
    "multi-agent",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
  "black>=24.0",
  "pytest>=8.0",
  "ruff>=0.5.0",
]
test = [
  "httpx2>=0.28.1",
  "pytest>=8.0",
]
agents = [
  "google-adk>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["walletmind*"]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
]
ignore = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
